# literature-agent_20260209

./: OPTIMIZATION_LOG.md  rename_files.sh  replace_symbols.sh  verify_changes.sh
CustomOp/: CMakeLists.txt  CMakePresets.json
CustomOp/build_out/: CMakeCache.txt  Makefile  cmake_install.cmake
CustomOp/build_out/framework/: Makefile  cmake_install.cmake
CustomOp/build_out/framework/tf_plugin/: Makefile  cmake_install.cmake
CustomOp/build_out/op_host/: Makefile  cmake_install.cmake
CustomOp/build_out/op_kernel/: Makefile  cmake_install.cmake
CustomOp/build_out/op_kernel/binary/dynamic/: reduce_custom.cpp  reduce_custom.h  reduce_custom_tiling_data.h
CustomOp/build_out/tests/: Makefile  cmake_install.cmake
CustomOp/build_out/tests/ut/: Makefile  cmake_install.cmake
CustomOp/cmake/: config.cmake
CustomOp/examples/: test_aclnn_reduce_custom.cpp
CustomOp/op_host/: CMakeLists.txt  reduce_custom.cpp  reduce_custom_def.cpp  reduce_custom_tiling.cpp  reduce_custom_tiling.h
ReduceCustom/op_host/: CMakeLists.txt  reduce_custom_infershape.cpp
ReduceCustom/op_kernel/: reduce_custom_tiling_key.h
